Kubernetes/02.environment.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: projeto3
